<resources>
    <string name="app_name">NewsApplication</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_another_number">Another Number</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings related to login -->
    <string name="prompt_number">Your phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="prompt_email">Your email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="tv_otp">Enter phone number for receiving OTP</string>
    <string name="tv_enter_otp">Enter OTP sent to your phone</string>
    <string name="tv_registered_number">This number has been registered</string>
    <string name="tv_time_resend">Resend otp: </string>
    <!--    Menu-->
    <string name="mn_bt_news">News</string>
    <string name="mn_bt_video">Videos</string>
    <string name="mn_bt_info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>